mpaviewer-deployment-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpaviewer-uat
spec:
  selector:
    matchLabels:
      app: mpaviewer
  replicas: 1
  template:
    metadata:
      labels:
        app: mpaviewer
    spec:
      containers:
      - name: mpaviewer-uat
        image: ghcr.io/dbca-wa/mpaviewer:v0.1.0
        imagePullPolicy: IfNotPresent
        command:
            - R
            - '-e'
            - options('shiny.port'=8080,shiny.host='0.0.0.0');mpaviewer::run_app()
        resources:
          requests:
            memory: "128Mi"
            cpu: "5m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
          - mountPath: /app/inst/data
            name: mpaviewer-data
          - mountPath: /tmp
            name: tmpfs-ram
      volumes:
        - name: mpaviewer-data
          persistentVolumeClaim:
            claimName: pvc-mpaviewer-data-uat
        - name: tmpfs-ram
          emptyDir:
            medium: "Memory"
---
apiVersion: v1
kind: Service
metadata:
  name: mpaviewer-clusterip-uat
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mpaviewer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpaviewer-ingress-uat
spec:
  rules:
    - host: mpaviewer-uat.dbca.wa.gov.au
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mpaviewer-clusterip-uat
              port:
                number: 8080
    - host: marinedashboard-uat.dbca.wa.gov.au
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mpaviewer-clusterip-uat
              port:
                number: 8080
